--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,18 @@
 					</dependency>
 				</dependencies>
 			</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.7.0</version>
+				<configuration>
+					<source>9</source>
+					<target>9</target>
+					<compilerArgs>
+						<arg>--add-modules</arg>
+						<arg>jdk.incurbator.httpclient</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
@@ -52,6 +64,11 @@
 			<artifactId>junit-jupiter-api</artifactId>
 			<version>RELEASE</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.2</version>
 		</dependency>
 	</dependencies>
 </project>
