--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 				<artifactId>exec-maven-plugin</artifactId>
 				<version>1.2.1</version>
 				<configuration>
-					<mainClass>ru.relz.km.Agent</mainClass>
+					<mainClass>ru.relz.km.KMAgent</mainClass>
 				</configuration>
 			</plugin>
 			<plugin>
